--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <!-- NEW PAGE CONTENT -->
   <section id="rectPage" class="hidden">
     <div class="rect-container">
-      <div class="rect"></div>
-      <div class="rect"></div>
-      <div class="rect"></div>
-      <div class="rect"></div>
-      <div class="rect"></div>
+<div class="rect">Glow</div>
+<div class="rect">Shake</div>
+<div class="rect">Color</div>
+<div class="rect">Size</div>
+<div class="rect">Bounce</div>
     </div>
   </section>
 
