--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <!-- NEW PAGE CONTENT -->
   <section id="rectPage" class="hidden">
     <div class="rect-container">
-<div class="rect">Glow</div>
+<div class="rect" id="glowBtn">Glow</div>
+
 <div class="rect">Shake</div>
 <div class="rect">Color</div>
 <div class="rect">Size</div>
