--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <div class="rect">Color</div>
 <div class="rect">Size</div>
 <div class="rect">Bounce</div>
+<div class="rect" id="shakeBtn">Shake</div>
+
     </div>
   </section>
 
