--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="rect" id="glowBtn">Glow</div>
 
 
-<div class="rect">Color</div>
+<div class="rect" id="colorBtn">Color</div>
 <div class="rect">Size</div>
 <div class="rect">Bounce</div>
 <div class="rect" id="shakeBtn">Shake</div>
