--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
     <button class="menu-btn" id="btnRectangles">Rectangles Demo</button>
   </aside>
 
+  <!-- HOME -->
   <main id="home" class="center fade-in">
     <h1>Welcome to Dancing UI</h1>
     <p>A playground for animations and UI effects.</p>
   </main>
 
-  <!-- NEW PAGE CONTENT -->
+  <!-- RECTANGLE PAGE -->
   <section id="rectPage" class="hidden">
     <div class="rect-container">
-<div class="rect" id="glowBtn">Glow</div>
 
+      <div class="rect" id="glowBtn">Glow</div>
 
-<div class="rect" id="colorBtn">Color</div>
-<div class="rect">Size</div>
-<div class="rect">Bounce</div>
-<div class="rect" id="shakeBtn">Shake</div>
+      <div class="rect" id="colorBtn">Color</div>
+
+      <div class="rect">Size</div>
+
+      <div class="rect">Bounce</div>
+
+      <div class="rect" id="shakeBtn">Shake</div>
 
     </div>
   </section>
