Add IDs to Size and Bounce buttons in HTML

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
       <div class="rect" id="colorBtn">Color</div>
 
-      <div class="rect">Size</div>
+      <div class="rect" id="sizeBtn">Size</div>
 
-      <div class="rect">Bounce</div>
+      <div class="rect" id="bounceBtn">Bounce</div>
 
       <div class="rect" id="shakeBtn">Shake</div>
 
