--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
       <div class="rect" id="glowBtn">Glow</div>
 
-      <div class="rect" id="colorBtn">Color</div>
+      <div class="color-btn-wrapper">
+        <div class="rect" id="colorBtn">Color</div>
+      </div>
 
       <div class="rect" id="sizeBtn">Size</div>
 
