--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <main id="home" class="center fade-in">
     <h1>Welcome to Dancing UI</h1>
     <p>A playground for animations and UI effects.</p>
+    #bounceBtn:hover {
+  transform: translateY(-6px) scale(1.03);
+}
+
   </main>
 
   <!-- RECTANGLE PAGE -->
