--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   <main id="home" class="center fade-in">
     <h1>Welcome to Dancing UI</h1>
     <p>A playground for animations and UI effects.</p>
-    #bounceBtn:hover {
-  transform: translateY(-6px) scale(1.03);
-}
+    <div class="hint">
+      <span class="pulse">▶ Click anywhere to learn more</span>
+      <span class="key">⌨ Press <b>G</b> to open menu</span>
+    </div>
+
 
   </main>
 
