--- a/index.html
+++ b/index.html
@@ -17,16 +17,31 @@
   </aside>
 
   <!-- HOME -->
-  <main id="home" class="center fade-in">
+<main id="home" class="center fade-in">
+
+  <div id="home-step-1">
     <h1>Welcome to Dancing UI</h1>
     <p>A playground for animations and UI effects.</p>
-    <div class="hint">
-      <span class="pulse">▶ Click anywhere to learn more</span>
-      <span class="key">⌨ Press <b>G</b> to open menu</span>
-    </div>
+    <p class="hint">Click anywhere to learn more</p>
+    <p class="hint">Press G to open menu</p>
+  </div>
 
+  <div id="home-step-2" class="hidden">
+    <p class="intro-text">
+      Dancing UI is a personal playground built by a single developer to explore animations,
+      interactions, and experimental user interface ideas. This site is inspired by modern AI
+      tools like ChatGPT, OpenAI, DALL·E, GPT-4, and GPT-5 — not as official products, but as
+      motivation to learn, build, and experiment. Everything here is handcrafted, tested,
+      broken, fixed, and improved through curiosity and iteration. If you have feedback,
+      ideas, or suggestions for new interactions, feel free to reach out at
+      <strong>your@email.com</strong>. This project will keep evolving, one animation at a time.
+    </p>
 
-  </main>
+    <p class="hint">Click anywhere to continue</p>
+  </div>
+
+</main>
+
 
   <!-- RECTANGLE PAGE -->
   <section id="rectPage" class="hidden">
