--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
   <!-- HOME -->
   <main id="home" class="center fade-in">
+    <!-- INTRO IMAGE PAGE -->
+  <section id="introImage" class="hidden fade-in">
+    <img src="intro.png" alt="Introduction" />
+  </section>
+
 
     <div id="home-step-1">
       <h1>Welcome to Dancing UI</h1>
