--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
   <!-- HOME -->
   <main id="home" class="center fade-in">
+    <!-- INTRO IMAGE SCENE -->
+  <section id="introScene" class="hidden intro-scene">
+    <img src="intro.png" alt="Introduction" />
+    <p class="hint">Click anywhere to continue</p>
+  </section>
+
     <!-- INTRO IMAGE PAGE -->
   <section id="introImage" class="hidden fade-in">
     <img src="intro.png" alt="Introduction" />
