--- a/index.html
+++ b/index.html
@@ -18,53 +18,26 @@
 
   <!-- HOME -->
   <main id="home" class="center fade-in">
-    <!-- INTRO IMAGE SCENE -->
-  <section id="introScene" class="hidden intro-scene">
+    <h1>Welcome to Dancing UI</h1>
+    <p>A playground for animations and UI effects.</p>
+    <p class="hint">Click anywhere to learn more</p>
+    <p class="hint">Press G to open menu</p>
+  </main>
+
+  <!-- INTRO IMAGE SCENE -->
+  <section id="introScene" class="intro-scene hidden">
     <img src="intro.png" alt="Introduction" />
     <p class="hint">Click anywhere to continue</p>
   </section>
-
-    <!-- INTRO IMAGE PAGE -->
-  <section id="introImage" class="hidden fade-in">
-    <img src="intro.png" alt="Introduction" />
-  </section>
-
-
-    <div id="home-step-1">
-      <h1>Welcome to Dancing UI</h1>
-      <p>A playground for animations and UI effects.</p>
-      <p class="hint">Click anywhere to learn more</p>
-      <p class="hint">Press G to open menu</p>
-    </div>
-
-    <div id="home-step-2" class="hidden">
-      <p class="intro-text">
-        Dancing UI is a personal playground built by a single developer to explore animations,
-        interactions, and experimental user interface ideas. This site is inspired by modern AI
-        tools like ChatGPT, OpenAI, DALL·E, GPT-4, and GPT-5 — not as official products, but as
-        motivation to learn, build, and experiment. Everything here is handcrafted, tested,
-        broken, fixed, and improved through curiosity and iteration. If you have feedback,
-        ideas, or suggestions for new interactions, feel free to reach out at
-        <strong>your@email.com</strong>. This project will keep evolving, one animation at a time.
-      </p>
-
-      <p class="hint">Click anywhere to continue</p>
-    </div>
-
-  </main>
 
   <!-- RECTANGLE PAGE -->
   <section id="rectPage" class="hidden">
     <div class="rect-container">
 
       <div class="rect" id="glowBtn">Glow</div>
-
       <div class="rect" id="colorBtn">Color</div>
-
       <div class="rect" id="sizeBtn">Size</div>
-
       <div class="rect" id="bounceBtn">Bounce</div>
-
       <div class="rect" id="shakeBtn">Shake</div>
 
     </div>
@@ -72,4 +45,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
