--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   <!-- MENU -->
   <aside id="menu">
     <h2 class="menu-title">UI Effects</h2>
+  
+    <!-- NEW HOME BUTTON -->
+    <button class="menu-btn" id="btnHome">Home</button>
+  
     <button class="menu-btn" id="btnRectangles">Rectangles Demo</button>
   </aside>
+
 
   <!-- HOME -->
   <main id="home" class="center fade-in">
