--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
   <!-- HOME -->
   <main id="home" class="center fade-in">
+  <div class="home-inner">
     <h1>Welcome to Dancing UI</h1>
     <p>A playground for animations and UI effects.</p>
     <p class="hint">Click anywhere to learn more</p>
     <p class="hint">Press G to open menu</p>
-  </main>
+  </div>
+</main>
 
   <!-- INTRO IMAGE SCENE -->
   <section id="introScene" class="intro-scene hidden">
