--- a/index.html
+++ b/index.html
@@ -13,23 +13,22 @@
   <!-- MENU -->
   <aside id="menu">
     <h2 class="menu-title">UI Effects</h2>
-  
-    <!-- NEW HOME BUTTON -->
-    <button class="menu-btn" id="btnHome">Home</button>
-  
     <button class="menu-btn" id="btnRectangles">Rectangles Demo</button>
+    <button class="menu-btn" id="btnHome">Home</button> <!-- quick home button -->
   </aside>
-
 
   <!-- HOME -->
   <main id="home" class="center fade-in">
-  <div class="home-inner">
-    <h1>Welcome to Dancing UI</h1>
-    <p>A playground for animations and UI effects.</p>
-    <p class="hint">Click anywhere to learn more</p>
-    <p class="hint">Press G to open menu</p>
-  </div>
-</main>
+    <!-- IMPORTANT: only .home-inner will be moved by JS -->
+    <div class="home-inner">
+      <h1>Welcome to Dancing UI</h1>
+      <p>A playground for animations and UI effects.</p>
+      <div class="hint">
+        <span class="pulse">Click anywhere to learn more</span>
+        <span class="key">Press G to open menu</span>
+      </div>
+    </div>
+  </main>
 
   <!-- INTRO IMAGE SCENE -->
   <section id="introScene" class="intro-scene hidden">
@@ -40,17 +39,14 @@
   <!-- RECTANGLE PAGE -->
   <section id="rectPage" class="hidden">
     <div class="rect-container">
-
       <div class="rect" id="glowBtn">Glow</div>
       <div class="rect" id="colorBtn">Color</div>
       <div class="rect" id="sizeBtn">Size</div>
       <div class="rect" id="bounceBtn">Bounce</div>
       <div class="rect" id="shakeBtn">Shake</div>
-
     </div>
   </section>
 
   <script src="script.js"></script>
 </body>
-
 </html>
