--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <button class="menu-btn" id="btnHome">Home</button>
   
     <button class="menu-btn" id="btnRectangles">Rectangles Demo</button>
+
+    <button class="menu-btn" id="btnSliders">Sliders Demo</button>
+
   </aside>
 
 
