--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
   </section>
 
   <script src="script.js"></script>
+  <section id="sliderPage" class="hidden">
+  <div class="slider-vertical-row">
+    <input type="range" class="v-slider">
+    <input type="range" class="v-slider">
+    <input type="range" class="v-slider">
+  </div>
+
+  <div class="slider-horizontal-row">
+    <input type="range" class="h-slider">
+    <input type="range" class="h-slider">
+  </div>
+</section>
+
 </body>
 
 </html>
