--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     </div>
   </section>
 
-  <script src="script.js"></script>
-  <section id="sliderPage" class="hidden">
+  <!-- SLIDER PAGE -->
+<section id="sliderPage" class="hidden">
   <div class="slider-vertical-row">
     <input type="range" class="v-slider">
     <input type="range" class="v-slider">
@@ -66,6 +66,9 @@
     <input type="range" class="h-slider">
   </div>
 </section>
+
+<script src="script.js"></script>
+
 
 </body>
 
