--- a/index.html
+++ b/index.html
@@ -53,19 +53,33 @@
     </div>
   </section>
 
-  <!-- SLIDER PAGE -->
-<section id="sliderPage" class="hidden">
-  <div class="slider-vertical-row">
-    <input type="range" class="v-slider">
-    <input type="range" class="v-slider">
-    <input type="range" class="v-slider">
+<section id="sliderPage" class="hidden slider-page">
+
+  <!-- TOP: VERTICAL SLIDERS -->
+  <div class="slider-top">
+    <div class="v-slider">
+      <div class="v-thumb"></div>
+    </div>
+    <div class="v-slider">
+      <div class="v-thumb"></div>
+    </div>
+    <div class="v-slider">
+      <div class="v-thumb"></div>
+    </div>
   </div>
 
-  <div class="slider-horizontal-row">
-    <input type="range" class="h-slider">
-    <input type="range" class="h-slider">
+  <!-- BOTTOM: HORIZONTAL SLIDERS -->
+  <div class="slider-bottom">
+    <div class="h-slider">
+      <div class="h-thumb"></div>
+    </div>
+    <div class="h-slider">
+      <div class="h-thumb"></div>
+    </div>
   </div>
+
 </section>
+
 
 <script src="script.js"></script>
 
