--- a/index.html
+++ b/index.html
@@ -1,44 +1,57 @@
-</div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dancing UI</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-  <!-- SLIDER PAGE -->
-<section id="sliderPage" class="hidden">
-  <div class="slider-vertical-row">
-    <input type="range" class="v-slider">
-    <input type="range" class="v-slider">
-    <input type="range" class="v-slider">
-<section id="sliderPage" class="hidden slider-page">
+  <div class="bg"></div>
 
-  <!-- TOP: VERTICAL SLIDERS -->
-  <div class="slider-top">
-    <div class="v-slider">
-      <div class="v-thumb"></div>
+  <!-- MENU -->
+  <aside id="menu">
+    <h2 class="menu-title">UI Effects</h2>
+    <button class="menu-btn" id="btnHome">Home</button>
+    <button class="menu-btn" id="btnRectangles">Rectangles</button>
+    <button class="menu-btn" id="btnSliders">Sliders</button>
+  </aside>
+
+  <!-- HOME -->
+  <main id="home" class="page active">
+    <div class="home-inner">
+      <h1>Dancing UI</h1>
+      <p>A playground for animations and UI effects</p>
+      <p class="hint">Press G to open menu</p>
     </div>
-    <div class="v-slider">
-      <div class="v-thumb"></div>
+  </main>
+
+  <!-- RECTANGLES -->
+  <section id="rectPage" class="page">
+    <div class="rect-container">
+      <div class="rect">Glow</div>
+      <div class="rect">Color</div>
+      <div class="rect">Size</div>
+      <div class="rect">Bounce</div>
+      <div class="rect">Shake</div>
     </div>
-    <div class="v-slider">
-      <div class="v-thumb"></div>
+  </section>
+
+  <!-- SLIDERS -->
+  <section id="sliderPage" class="page">
+    <div class="slider-top">
+      <div class="v-slider"><div class="v-thumb"></div></div>
+      <div class="v-slider"><div class="v-thumb"></div></div>
+      <div class="v-slider"><div class="v-thumb"></div></div>
     </div>
-</div>
 
-  <div class="slider-horizontal-row">
-    <input type="range" class="h-slider">
-    <input type="range" class="h-slider">
-  <!-- BOTTOM: HORIZONTAL SLIDERS -->
-  <div class="slider-bottom">
-    <div class="h-slider">
-      <div class="h-thumb"></div>
+    <div class="slider-bottom">
+      <div class="h-slider"><div class="h-thumb"></div></div>
+      <div class="h-slider"><div class="h-thumb"></div></div>
     </div>
-    <div class="h-slider">
-      <div class="h-thumb"></div>
-    </div>
-</div>
+  </section>
 
-</section>
-
-
-<script src="script.js"></script>
-
-
-  
+  <script src="script.js"></script>
+</body>
+</html>
